# rascal

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
sample_collection/: auth.json  get.json
src/: db.rs  executer.rs  main.rs  parser.rs
