[package]
name = "rascal"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base64 = "0.22.0"
clap = { version = "4.5.2", features = ["derive"] }
futures = "0.3.30"
log = "0.4.21"
mime = "0.3.17"
reqwest = { version = "0.11.25", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = "0.26.2"
strum_macros = "0.26.2"
tera = "1.19.1"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }
